# libfreenect

fakenect/: CMakeLists.txt  record.c
